(env
  (dev     (flags (-w +1..3+5..28+30..39+43+46..47+49..57+61..62-40-26 -strict-sequence -strict-formats -short-paths -keep-locs -g)))
  (release (flags (-w +1..3+5..28+30..39+43+46..47+49..57+61..62-40-26 -strict-sequence -strict-formats -short-paths -keep-locs   )))
)

(executable
  (name main)
  (libraries rusage mtime mtime.clock.os repr fmt unix irmin-pack.unix optint)
 (preprocess
  (pps ppx_repr))

)
